tests/ui/lexer/lex-bad-token.stderr
error: unknown start of token: \u{25cf}
  --> $DIR/lex-bad-token.rs:1:1
   |
LL | ●
   | ^

error: aborting due to 1 previous error

